# motacpp

./: CMakeLists.txt  intro.md
include/: Block.h  Enemy.h  Floor1.h  GameStage.h  Hero.h  ImgManager.h  Map.h  greenslime.h
scr/: main.cpp
scr/assets/: ImgManager.cpp
scr/core/: Block.cpp  MapReader.cpp  MapReader.h
scr/lib/Enemy/: Enemy.cpp  greenslime.cpp
scr/lib/Hero/: Hero.cpp
scr/stage/: Floor1.cpp  GameStage.cpp  Map.cpp
